1. Collection API Улучшения[#217192]